--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,346 @@
 * {
-  outline: 1px solid red;
-  box-sizing: border-box;
+//outline: 1px solid red; //
+} 
+
+.header {
+  min-height: 293px; 
+  padding: 92px 50px 96px;
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center;
 }
+
+.header__menu {
+  justify-self: start;
+  font-weight: 400;
+  font-style: Regular;
+  font-size: 18px;
+  line-height: 100%;
+}
+
+.header__links-list {
+  display: flex;
+  list-style-type: circle;
+  justify-content: start;
+  gap: 32px;
+}
+
+.header__links-list-item {
+  list-style-type: circle;
+}
+
+.header__links-list-item_no-bullit {
+  list-style-type: none;
+}
+
+.header__link {
+  text-decoration: underline;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 4px;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo {
+  justify-self: center;
+  width: 148px;
+  height: 105px;
+}
+
+.header__logo-image {
+  display: block;
+}
+
+.address {
+  font-weight: 400;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.address a {
+  text-decoration-thickness: 1px;
+  text-underline-offset: 4px;
+}
+
+.header__address {
+  justify-self: end;
+  max-width: 240px;
+}
+
+.cover {
+  padding: 165px 50px 50px;
+  min-height: 757px;
+  position: relative;
+  background-image: url(/images/cover.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: -138px 0px;
+  
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  background-color: rgb(0, 0, 0, 0.6);
+  z-index: 1;
+}
+
+.cover__title {
+  position: relative; 
+  z-index: 2; 
+  color: #FFF;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 100px;
+  line-height: 115%;
+  letter-spacing: 0.3em;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.aligned-text {
+  display: block; 
+}
+
+.aligned-text_left {
+  text-align: left;
+}
+.aligned-text_center {
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding-left: 26px;
+}
+
+.aligned-text_right {
+  text-align: right;
+  margin-right: -28px;
+}
+
+.cover__description {
+  position: absolute; 
+  bottom: 50px; 
+  left: 50px; 
+  right: 50px; 
+  z-index: 2; 
+  display: flex;
+  justify-content: space-between;
+  align-items: center;                  
+  gap: 79px;
+}
+
+.cover__description-text {
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 28px;
+  letter-spacing: 0; 
+  word-spacing: 19px;
+  text-transform: uppercase;
+  color: white;
+}
+
+.bet-button {
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 100%; 
+  letter-spacing: 0; 
+  text-transform: uppercase;
+  color: white;
+  background-color: transparent;
+  border: 1px solid white;
+  padding: 14px 32px;
+  cursor: pointer;
+}
+
+.bet-button:hover {
+  background-color: rgba(255, 255, 255, 0.1);      
+}
+
+.lots {
+  margin-top: 7px;
+  padding: 180px 24px 120px;
+  min-height: 723px;
+}
+
+.lots__heading {
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 40px;
+  line-height: 100%;
+  text-transform: uppercase;
+  margin-left: 40px;
+  margin-bottom: 27px;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  margin-bottom: 30px;
+}
+
+.lots__card-list-item {
+  list-style: none; 
+  padding: 0;      
+  margin: 0; 
+  width: 334px;
+  min-height: 596px;
+}
+
+.card-link {
+  text-decoration: none;
+  height: 100%;
+}
+
+.card {
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column; 
+  height: 100%;
+  position: relative;
+  padding: 48px 40px;
+  justify-content: space-between;
+}
+
+.card_type_film {
+  background-image: url(/images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(/images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(/images/card-lot-03.jpg);
+}
+
+.card__title {
+  color: white;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 22px;
+  line-height: 120%;
+  text-transform: uppercase;
+  text-decoration: underline;
+ text-decoration-thickness: 1px;
+  text-underline-offset: 3px;
+  text-decoration-style: solid;
+  z-index: 2;
+}
+
+.card__text {
+  color: white;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 120%;
+  z-index: 2;
+}
+
+.lots__look-more-link {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 100%;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 5px;
+  margin-left: 40px;
+}
+
+.about {
+  margin-top: -76px;
+  padding: 120px 24px 180px;
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  gap: 25px;
+}
+
+.about__logo {
+  width: 240px;
+  height: 240px;
+  background-color: black;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-self: center;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__title {
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 40px;
+  line-height: 100%;
+  letter-spacing: 0;
+  text-transform: uppercase;
+  margin-bottom: 100px;
+  margin-top: 100px;
+}
+
+.about__text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  max-width: 690px;
+}
+
+.footer {
+  margin-top: 2px;
+  padding: 0 50px 82px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: space-between;
+}
+
+.footer__menu-list {
+  list-style: none;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1;
+  letter-spacing: 0;
+  text-align: center;
+  text-underline-offset: 4px;
+  display: grid;
+  gap: 3px;
+}
+
+.footer__menu-link {
+  text-decoration-thickness: 1px;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+
+.footer__social-list-container {
+  justify-self: end;
+}
+
+.footer__social-list {
+  display: flex;
+  list-style: none;
+  gap: 48px;
+}
+
+.footer__social-list-item{
+  width: 48px;
+  height: 48px;
+}
+
 
