--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 .header {
-  min-height: 293px; 
+  min-height: 293px;
   padding: 92px 50px 96px;
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
@@ -78,7 +78,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: -138px 0px;
-  
 }
 
 .overlay {
@@ -89,9 +88,9 @@
 }
 
 .cover__title {
-  position: relative; 
-  z-index: 2; 
-  color: #FFF;
+  position: relative;
+  z-index: 2;
+  color: #fff;
   font-weight: 700;
   font-style: Bold;
   font-size: 100px;
@@ -102,12 +101,13 @@
 }
 
 .aligned-text {
-  display: block; 
+  display: block;
 }
 
 .aligned-text_left {
   text-align: left;
 }
+
 .aligned-text_center {
   text-align: center;
   margin-top: 20px;
@@ -121,14 +121,14 @@
 }
 
 .cover__description {
-  position: absolute; 
-  bottom: 50px; 
-  left: 50px; 
-  right: 50px; 
-  z-index: 2; 
+  position: absolute;
+  bottom: 50px;
+  left: 50px;
+  right: 50px;
+  z-index: 2;
   display: flex;
   justify-content: space-between;
-  align-items: center;                  
+  align-items: center;
   gap: 79px;
 }
 
@@ -136,7 +136,7 @@
   font-weight: 400;
   font-size: 22px;
   line-height: 28px;
-  letter-spacing: 0; 
+  letter-spacing: 0;
   word-spacing: 19px;
   text-transform: uppercase;
   color: white;
@@ -145,8 +145,8 @@
 .bet-button {
   font-weight: 500;
   font-size: 22px;
-  line-height: 100%; 
-  letter-spacing: 0; 
+  line-height: 100%;
+  letter-spacing: 0;
   text-transform: uppercase;
   color: white;
   background-color: transparent;
@@ -156,7 +156,7 @@
 }
 
 .bet-button:hover {
-  background-color: rgba(255, 255, 255, 0.1);      
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .lots {
@@ -183,9 +183,9 @@
 }
 
 .lots__card-list-item {
-  list-style: none; 
-  padding: 0;      
-  margin: 0; 
+  list-style: none;
+  padding: 0;
+  margin: 0;
   width: 334px;
   min-height: 596px;
 }
@@ -199,7 +199,7 @@
   background-size: cover;
   background-position: center;
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   height: 100%;
   position: relative;
   padding: 48px 40px;
@@ -226,7 +226,7 @@
   line-height: 120%;
   text-transform: uppercase;
   text-decoration: underline;
- text-decoration-thickness: 1px;
+  text-decoration-thickness: 1px;
   text-underline-offset: 3px;
   text-decoration-style: solid;
   z-index: 2;
@@ -323,7 +323,6 @@
   text-decoration: none;
 }
 
-
 .footer__social-list-container {
   justify-self: end;
 }
@@ -334,9 +333,7 @@
   gap: 48px;
 }
 
-.footer__social-list-item{
+.footer__social-list-item {
   width: 48px;
   height: 48px;
 }
-
-
