--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,4 @@
 .header {
-  min-height: 293px;
   padding: 92px 50px 96px;
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
@@ -9,7 +8,6 @@
 .header__menu {
   justify-self: start;
   font-weight: 400;
-  font-style: Regular;
   font-size: 18px;
   line-height: 100%;
 }
@@ -41,12 +39,13 @@
 
 .header__logo {
   justify-self: center;
-  width: 148px;
+  width: 140px;
   height: 105px;
 }
 
 .header__logo-image {
   display: block;
+  height: 105px;
 }
 
 .address {
@@ -74,7 +73,7 @@
   padding: 165px 50px 50px;
   min-height: 757px;
   position: relative;
-  background-image: url(/images/cover.jpg);
+  background-image: url(../images/cover.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: -138px 0px;
@@ -84,15 +83,14 @@
   position: absolute;
   inset: 0;
   background-color: rgb(0, 0, 0, 0.6);
-  z-index: 1;
+  z-index: 0;
 }
 
 .cover__title {
   position: relative;
-  z-index: 2;
+  z-index: 1;
   color: #fff;
   font-weight: 700;
-  font-style: Bold;
   font-size: 100px;
   line-height: 115%;
   letter-spacing: 0.3em;
@@ -106,30 +104,29 @@
 
 .aligned-text_left {
   text-align: left;
+  margin-top: 1px;
 }
 
 .aligned-text_center {
   text-align: center;
   margin-top: 20px;
   margin-bottom: 20px;
-  padding-left: 26px;
+  padding-left: 31px;
 }
 
 .aligned-text_right {
   text-align: right;
-  margin-right: -28px;
+  margin-right: -30px;
 }
 
 .cover__description {
-  position: absolute;
-  bottom: 50px;
-  left: 50px;
-  right: 50px;
-  z-index: 2;
+  position: relative;
+  z-index: 1;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 79px;
+  margin-top: 104px;
 }
 
 .cover__description-text {
@@ -160,19 +157,17 @@
 }
 
 .lots {
-  margin-top: 7px;
   padding: 180px 24px 120px;
-  min-height: 723px;
 }
 
 .lots__heading {
   font-weight: 700;
-  font-style: Bold;
   font-size: 40px;
   line-height: 100%;
   text-transform: uppercase;
   margin-left: 40px;
   margin-bottom: 27px;
+  margin-top: 4px;
 }
 
 .lots__card-list {
@@ -180,6 +175,7 @@
   flex-wrap: wrap;
   gap: 25px;
   margin-bottom: 30px;
+  margin-top: 30px;
 }
 
 .lots__card-list-item {
@@ -207,21 +203,22 @@
 }
 
 .card_type_film {
-  background-image: url(/images/card-lot-01.jpg);
+  background-image: url(../images/card-lot-01.jpg);
+  background-size: 165% 100%
 }
 
 .card_type_book {
-  background-image: url(/images/card-lot-02.jpg);
+  background-image: url(../images/card-lot-02.jpg);
+  background-size: 162% 100%;
 }
 
 .card_type_picture {
-  background-image: url(/images/card-lot-03.jpg);
+  background-image: url(../images/card-lot-03.jpg);
 }
 
 .card__title {
   color: white;
   font-weight: 700;
-  font-style: Bold;
   font-size: 22px;
   line-height: 120%;
   text-transform: uppercase;
@@ -250,8 +247,7 @@
 }
 
 .about {
-  margin-top: -76px;
-  padding: 120px 24px 180px;
+  padding: 38px 24px 180px;
   display: grid;
   grid-template-columns: 334px 1fr;
   gap: 25px;
@@ -275,13 +271,12 @@
 
 .about__title {
   font-weight: 700;
-  font-style: Bold;
   font-size: 40px;
   line-height: 100%;
   letter-spacing: 0;
   text-transform: uppercase;
-  margin-bottom: 100px;
-  margin-top: 100px;
+  margin-bottom: 104px;
+  margin-top: 104px;
 }
 
 .about__text {
@@ -296,7 +291,6 @@
 }
 
 .footer {
-  margin-top: 2px;
   padding: 0 50px 82px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -313,6 +307,7 @@
   text-underline-offset: 4px;
   display: grid;
   gap: 3px;
+  margin-top: 2px;
 }
 
 .footer__menu-link {
